--- a/docs/Fabulosa.Docs/assets/styles.scss
+++ b/docs/Fabulosa.Docs/assets/styles.scss
@@ -41,11 +41,8 @@ select::-ms-expand {
 }
 
 .s-title {
-    border-bottom: 1px solid #e7e7e7
-}
-
-.s-description {
-    margin-top: 1rem;
+    border-bottom: 1px solid #e7e7e7;
+    margin-bottom: 1rem !important;
 }
 
 .docs-grid-page-col {
@@ -54,93 +51,119 @@ select::-ms-expand {
     text-align: center;
 }
 
+/* function */
+span.f {
+    color: #6f42c1;
+}
 /* identifier */
-span.i { color:#000000; }
+span.i {
+    color: #005cc5;
+}
 /* comment */
-span.c { color:#008000; }
+span.c {
+    color: #008000;
+}
 /* inactive code */
-span.inactive { color:#808080; }
+span.inactive {
+    color: #808080;
+}
 /* keywords */
-span.k { color:#000080;  }
+span.k {
+    color: #d73a49;
+}
 /* numbers */
-span.n { color:#008000; }
+span.n {
+    color: #008000;
+}
 /* operators */
-span.o { color:#800080; }
+span.o {
+    color: #800080;
+}
 /* preprocessor */
-span.prep { color:#800080; }
+span.prep {
+    color: #800080;
+}
 /* string */
-span.s { color:#808000; }
+span.s {
+    color: #808000;
+}
 /* line number */
-span.l { color:#80b0b0; }
+span.l {
+    color: #bbbbbb;
+}
 /* fsi output */
-span.fsi { font-style:italic; color:#606060; }
+span.fsi {
+    font-style: italic;
+    color: #606060;
+}
 /* omitted */
-span.omitted { 
-	border:solid 1px #d8d8d8;
-	color:#808080;
-	padding:0px 0px 1px 0px;
-	background:#fafafa;
+span.omitted {
+    border: solid 1px #d8d8d8;
+    color: #808080;
+    padding: 0px 0px 1px 0px;
+    background: #fafafa;
 }
 
-div.tip 
-{
-	font-size: 8pt;
-	font-family: consolas, monaco, 'Lucida Console', monospace;
-	padding:3px;
-	border:1px solid rgba(0,0,0,0.15);
-	border-radius: 2px;
-	background:#ffffd0;
-	display:none;
-	pointer-events:none;
+div.tip {
+    font-size: 8pt;
+    padding: 1em;
+    border: none;
+    color: #50596c;
+    box-shadow: 0 0.2rem 0.5rem rgba(69,77,93,.3);
+    border-radius: 2px;
+    background: #fff;
+    /*background: rgba(69,77,93,.9);*/
+    display: none;
+    pointer-events: none;
 }
 
-pre a.fssniplink
-{
-	font:bold 7.5pt calibry, arial, verdana; 
-	position:absolute; 
-	bottom:0.3em; 
-	right:0.3em;
-	color:#a8a8a8;
+pre a.fssniplink {
+    font: bold 7.5pt calibry, arial, verdana;
+    position: absolute;
+    bottom: 0.3em;
+    right: 0.3em;
+    color: #a8a8a8;
 }
 
 table.pre {
-  border-spacing: 0px;
-  margin-bottom: 10px;
+    border-spacing: 0px;
+    margin-bottom: 10px;
 }
 
 /* Optionally, also configure how the PRE element and TABLE.PRE look */
 table.pre pre {
-  padding:0px;
-  margin:0px;
-  border-style:none;
+    padding: 0px;
+    margin: 0px;
+    border-style: none;
 }
 
 pre, table.pre td {
-  padding:9.5px;
-  background:#f5f5f5;
-  border:solid 1px black;
-  border-radius:2px;
-  border-color:rgba(0,0,0,0.15);
-  margin:0px 0px 10px 0px;
+    padding: 9.5px;
+    background: #f8f9fa;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    margin: 0px 0px 10px 0px;
 }
 
 table.pre td.lines {
-  border-top-right-radius:0px;
-  border-bottom-right-radius:0px;
-  border-right-style: none;
-  padding-right:0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-right-style: none;
+    padding-right: 0px;
 }
+
 table.pre td.snippet {
-  border-top-left-radius:0px;
-  border-bottom-left-radius:0px;
-  border-left-style: none;
-  padding-left:4px;
+    width: 100%;
+    column-span: all;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left-style: none;
+    padding-left: 4px;
 }
 
 code, pre, pre code {
-	font-family: consolas, monaco, 'Lucida Console', monospace;
-	line-height:13pt;
-	background: none !important;
+    line-height: 13pt;
+    background: none !important;
     border-radius: initial !important;
     color: initial !important;
     font-size: 9pt !important;
