--- a/docs/Fabulosa.Docs/assets/styles.scss
+++ b/docs/Fabulosa.Docs/assets/styles.scss
@@ -1,8 +1,3 @@
-@import "../../../node_modules/spectre.css/dist/spectre.min.css";
-@import "../../../node_modules/spectre.css/dist/spectre-exp.min.css";
-@import "../../../node_modules/spectre.css/dist/spectre-icons.min.css";
-@import "../../../node_modules/spectre.css/docs/dist/docs.min.css";
-
 html, body {
     min-height: 100vh;
 }
@@ -52,59 +47,59 @@ select::-ms-expand {
 }
 
 /* function */
-span.f {
+.f {
     color: #6f42c1;
 }
 /* identifier */
-span.i {
+.i {
     color: #005cc5;
 }
 /* comment */
-span.c {
+.c {
     color: #008000;
 }
 /* inactive code */
-span.inactive {
+.inactive {
     color: #808080;
 }
 /* keywords */
-span.k {
+.k {
     color: #d73a49;
 }
 /* numbers */
-span.n {
+.n {
     color: #008000;
 }
 /* operators */
-span.o {
+.o {
     color: #800080;
 }
 /* preprocessor */
-span.prep {
+.prep {
     color: #800080;
 }
 /* string */
-span.s {
+.s {
     color: #808000;
 }
 /* line number */
-span.l {
+.l {
     color: #bbbbbb;
 }
 /* fsi output */
-span.fsi {
+.fsi {
     font-style: italic;
     color: #606060;
 }
 /* omitted */
-span.omitted {
+.omitted {
     border: solid 1px #d8d8d8;
     color: #808080;
     padding: 0px 0px 1px 0px;
     background: #fafafa;
 }
 
-div.tip {
+.tip {
     font-size: 8pt;
     padding: 1em;
     border: none;
@@ -117,7 +112,7 @@ div.tip {
     pointer-events: none;
 }
 
-pre a.fssniplink {
+pre .fssniplink {
     font: bold 7.5pt calibry, arial, verdana;
     position: absolute;
     bottom: 0.3em;
@@ -125,19 +120,19 @@ pre a.fssniplink {
     color: #a8a8a8;
 }
 
-table.pre {
+.pre {
     border-spacing: 0px;
     margin-bottom: 10px;
 }
 
 /* Optionally, also configure how the PRE element and TABLE.PRE look */
-table.pre pre {
+.pre pre {
     padding: 0px;
     margin: 0px;
     border-style: none;
 }
 
-pre, table.pre td {
+pre, .pre td {
     padding: 9.5px;
     background: #f8f9fa;
     border: 1px solid transparent;
@@ -145,14 +140,14 @@ pre, table.pre td {
     margin: 0px 0px 10px 0px;
 }
 
-table.pre td.lines {
+.pre .lines {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     border-right-style: none;
     padding-right: 0px;
 }
 
-table.pre td.snippet {
+.pre .snippet {
     width: 100%;
     column-span: all;
     border-top-left-radius: 0px;
